More Main details

--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
                 <br></p>
             </div>
             <div>
-                <a class="button" href="projects.html">My Projects</a>
-            </div>
-            <div class="bodyPhotos">
-                <div class="photo"></div>
-                <div class="photo"></div>
-                <div class="photo"></div>
-                <div class="photo"></div>
-                <div class="photo"></div>
-                <div class="photo"></div>
+                <div>
+                    <a class="button" href="projects.html">My Projects</a>
+                </div>
+                <div class="bodyPhotos">
+                    <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
+                    <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
+                    <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
+                    <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
+                    <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
+                    <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
+                </div>
             </div>
         </section>
     </div>
