Main display done?

--- a/index.html
+++ b/index.html
@@ -22,35 +22,33 @@
         </nav>
     </div>
 </header>
-<body>
-    <div class="bodyContainer">
-        <div class="photoNCG">
-            <img src="ncgsilouhette.png">
-
-
+<body class="homeBody">
+    <section class="bodyContainer">
+        <div class="bodyText">
+            <p><span class="hThree">A Superhero for the<br>Modern Workplace!</span>
+                <br><br>I know what I know, but I don't know everything.  That's when pushing <span class="boldText">beyond strict rationality</span> &mdash; toward attentiveness, imagination, logical experiment and new connections &mdash; comes in handy!<br><br>
+                It's a superpower, and we all have it, if we're willing to try and trust &mdash; have <span class="boldText">confidence!</span> &mdash; in our adaptability.<br><br>
+            <br></p>
         </div>
-        <section class="bodyContent">
-            <div class="bodyText">
-                <p class="hThree">A Superhero for the<br>Modern Workplace!</p>
-                <p><br>I know what I know, but I don't know everything.  That's when pushing <span class="boldText">beyond strict rationality</span> &mdash; toward attentiveness, imagination, logical experiment and new connections &mdash; comes in handy!<br><br>
-                    It's a superpower, and we all have it, if we're willing to try and trust &mdash; have <span class="boldText">confidence!</span> &mdash; in our adaptability.<br><br>
-                <br></p>
+    </section>
+    <section class="portfolio">
+        <div class="photoNCG">
+            <img src="ncgsilouhette.png" alt="Main photo of superhero in homemade costume">
+        </div>
+        <div class="myProject">
+            <div class="myProjectButton">
+                <a class="button" href="projects.html">My Projects</a>
             </div>
-            <div>
-                <div>
-                    <a class="button" href="projects.html">My Projects</a>
-                </div>
-                <div class="bodyPhotos">
-                    <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
-                    <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
-                    <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
-                    <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
-                    <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
-                    <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
-                </div>
+            <div class="bodyPhotos">
+                <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
+                <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
+                <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
+                <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
+                <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
+                <a href="#"><img class="photo" src="https://picsum.photos/150"></a>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 </body>
 <footer>
     <div class="footerBanner">
