Tablet display done?

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </nav>
     </div>
 </header>
-<body class="homeBody">
+<body class="homePage">
     <section class="bodyContainer">
         <div class="bodyText">
-            <p><span class="hThree">A Superhero for the<br>Modern Workplace!</span>
-                <br><br>I know what I know, but I don't know everything.  That's when pushing <span class="boldText">beyond strict rationality</span> &mdash; toward attentiveness, imagination, logical experiment and new connections &mdash; comes in handy!<br><br>
+            <p><span class="hThree">A Superhero for the<br>Modern Workplace!</span></p>
+                <p><br><br>I know what I know, but I don't know everything.  That's when pushing <span class="boldText">beyond strict rationality</span> &mdash; toward attentiveness, imagination, logical experiment and new connections &mdash; comes in handy!<br><br>
                 It's a superpower, and we all have it, if we're willing to try and trust &mdash; have <span class="boldText">confidence!</span> &mdash; in our adaptability.<br><br>
             <br></p>
         </div>
