All sizes finished!

--- a/index.html
+++ b/index.html
@@ -7,28 +7,32 @@
     <title>Domenic Scarcella - Home Page</title>
 </head>
 <header>
-    <div class="banner">
-        <div class="hOne">
-            <p>Domenic Scarcella</p>
+    <section class="banner">
+        <div class="bannerName">
+            <div class="hOne">
+                <p>Domenic Scarcella</p>
+            </div>
+            <div class="hTwo">
+                <p>(a.k.a. Nonrational Confidence Guy)</p>
+            </div>
         </div>
-        <div class="hTwo">
-            <p>(a.k.a. Nonrational Confidence Guy)</p>
+        <div class="bannerNav">
+            <nav>
+                <a class="currentPage" href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="projects.html">Projects</a>
+            </nav>
         </div>
-        <nav>
-            <a class="currentPage" href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="projects.html">Projects</a>
-        </nav>
-    </div>
+    </section>
 </header>
 <body class="homePage">
     <section class="bodyContainer">
         <div class="bodyText">
-            <p><span class="hThree">A Superhero for the<br>Modern Workplace!</span></p>
-                <p><br><br>I know what I know, but I don't know everything.  That's when pushing <span class="boldText">beyond strict rationality</span> &mdash; toward attentiveness, imagination, logical experiment and new connections &mdash; comes in handy!<br><br>
-                It's a superpower, and we all have it, if we're willing to try and trust &mdash; have <span class="boldText">confidence!</span> &mdash; in our adaptability.<br><br>
-            <br></p>
+            <h3>A Superhero for the Modern Workplace!<br></h3>
+            <p><br>I know what I know, but I don't know everything.  That's when pushing <span class="boldText">beyond strict rationality</span> &mdash; toward attentiveness, imagination, logical experiment and new connections &mdash; comes in handy!<br><br>
+                It's a superpower, and we all have it, if we're willing to try and trust &mdash; have <span class="boldText">confidence!</span> &mdash; in our adaptability.<br><br><br>
+            </p>
         </div>
     </section>
     <section class="portfolio">
