--- a/projects.html
+++ b/projects.html
@@ -6,22 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domenic Scarcella - Projects</title>
 </head>
-<section>
-    <div class="banner">
-        <div class="hOne">
-            <p>Domenic Scarcella</p>
+<header>
+    <section class="banner">
+        <div class="bannerName">
+            <div class="hOne">
+                <p>Domenic Scarcella</p>
+            </div>
+            <div class="hTwo">
+                <p>(a.k.a. Nonrational Confidence Guy)</p>
+            </div>
         </div>
-        <div class="hTwo">
-            <p>(a.k.a. Nonrational Confidence Guy)</p>
+        <div class="bannerNav">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a class="currentPage" href="projects.html">Projects</a>
+            </nav>
         </div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a class="currentPage" href="projects.html">Projects</a>
-        </nav>
-    </div>
-</section>
+    </section>
+</header>
 <body>
     <h1> PROJECTS </h1>
 </body>
